--- a/src/View/Application/form/other/CodigosEstudiantes.form
+++ b/src/View/Application/form/other/CodigosEstudiantes.form
@@ -43,7 +43,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="lb">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de C&#xf3;digo Conductuales Estudiantes "/>
+        <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de c&#xf3;digos asignados"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
