--- a/src/View/Application/form/other/RangoDeHoras.form
+++ b/src/View/Application/form/other/RangoDeHoras.form
@@ -43,7 +43,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="lb">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de los Rangos de Horas"/>
+        <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de Rangos de Horas"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
     </Component>
