--- a/src/View/samplemessage/MessageEditPersonas.form
+++ b/src/View/samplemessage/MessageEditPersonas.form
@@ -407,7 +407,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="sansserif" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Your Message Title Dialog Custom"/>
+            <Property name="text" type="java.lang.String" value="Actualizar Credenciales"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
